fix css for jump links

--- a/doordesk/style/tailwind.css
+++ b/doordesk/style/tailwind.css
@@ -3,41 +3,42 @@
 @tailwind utilities;
 
 body {
-    @apply bg-gradient-to-br from-zinc-900 to-zinc-950 bg-fixed;
-    @apply w-screen h-screen;
-    @apply text-orange-50 antialiased font-mono tracking-tighter;
+  @apply bg-gradient-to-br from-zinc-900 to-zinc-950 bg-fixed;
+  @apply w-screen h-screen;
+  @apply text-orange-50 antialiased font-mono tracking-tighter;
 }
 
 a[aria-current="page"] {
-    border-bottom: 2px solid #de0002;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-bottom: 2px solid #de0002;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-/* for innerHTML articles */ 
+/* for innerHTML articles */
 article p {
-    @apply mt-5 indent-4;
+  @apply mt-5 indent-4;
 }
 
 article h3 {
-    @apply mt-8;
-}
-
-article h3 {
-    @apply text-2xl text-orange-600;
+    @apply mt-8 text-2xl text-orange-600;
 }
 
 article a {
-    @apply text-orange-300 hover:underline;
+  @apply text-orange-300 hover:underline;
 }
 
-article ul, article ol {
-    @apply mt-5 list-inside;
+article h3 > a {
+    @apply text-orange-600;
+}
+
+article ul,
+article ol {
+  @apply mt-5 list-inside;
 }
 
 article ul {
-    @apply list-disc;
+  @apply list-disc;
 }
 
 article ol {
-    @apply list-decimal;
+  @apply list-decimal;
 }
